fix: JUnit Exercise and Test in: test>java>JUnit>CalculatorTest